--- a/src/index.html
+++ b/src/index.html
@@ -78,6 +78,48 @@
           >)
         </div>
       </div>
+      <div class="slider-container">
+        <label for="star-min-size-slider">Star Min Size</label>
+        <input
+          type="range"
+          id="star-min-size-slider"
+          min="5"
+          max="50"
+          step="1"
+          value="15"
+        />
+        <div class="value-display">
+          <span id="star-min-size-value">15</span>
+        </div>
+      </div>
+      <div class="slider-container">
+        <label for="star-max-size-slider">Star Max Size</label>
+        <input
+          type="range"
+          id="star-max-size-slider"
+          min="10"
+          max="100"
+          step="1"
+          value="25"
+        />
+        <div class="value-display">
+          <span id="star-max-size-value">25</span>
+        </div>
+      </div>
+      <div class="slider-container">
+        <label for="star-fade-offset-slider">Star Fade Offset</label>
+        <input
+          type="range"
+          id="star-fade-offset-slider"
+          min="0"
+          max="1"
+          step="0.01"
+          value="0.1"
+        />
+        <div class="value-display">
+          <span id="star-fade-offset-value">0.75</span>
+        </div>
+      </div>
     </div>
     <script src="bundle.js"></script>
   </body>
