--- a/src/index.html
+++ b/src/index.html
@@ -56,10 +56,45 @@
         opacity: 0;
         pointer-events: none;
       }
+      .debug-panel {
+        position: fixed;
+        top: 20px;
+        right: 20px;
+        background: rgba(0, 0, 0, 0.8);
+        padding: 15px;
+        border-radius: 8px;
+        color: #00ff00;
+        font-family: "Courier New", monospace;
+        font-size: 12px;
+        z-index: 1000;
+        min-width: 250px;
+      }
+      .debug-panel h3 {
+        margin: 0 0 10px 0;
+        color: #ffff00;
+      }
+      .debug-line {
+        margin: 2px 0;
+        white-space: nowrap;
+      }
     </style>
   </head>
   <body>
     <div class="black-overlay" id="black-overlay"></div>
+    <div class="debug-panel" id="debug-panel">
+      <h3>Debug Info</h3>
+      <div class="debug-line" id="debug-camera-pos">
+        Camera: (0.00, 0.00, 0.00)
+      </div>
+      <div class="debug-line" id="debug-terrain-height">Terrain: 0.00</div>
+      <div class="debug-line" id="debug-distance">Distance: 0.00</div>
+      <div class="debug-line" id="debug-required">Required: 0.00</div>
+      <div class="debug-line" id="debug-collision">Collision: NO</div>
+      <div class="debug-line" id="debug-terrain-status">Terrain: NULL</div>
+      <div class="debug-line" id="debug-experience">Experience: INACTIVE</div>
+      <div class="debug-line" id="debug-vertical">Vertical: NONE</div>
+      <div class="debug-line" id="debug-pause">Pause: NO</div>
+    </div>
     <div class="controls">
       <div class="slider-container">
         <label for="rotation-slider">Gradient Rotation</label>
@@ -118,6 +153,62 @@
         />
         <div class="value-display">
           <span id="star-fade-offset-value">0.75</span>
+        </div>
+      </div>
+      <div class="slider-container">
+        <label for="fog-distance-slider">Fog Depth</label>
+        <input
+          type="range"
+          id="fog-distance-slider"
+          min="10"
+          max="200"
+          step="5"
+          value="100"
+        />
+        <div class="value-display">
+          <span id="fog-distance-value">100</span> units
+        </div>
+      </div>
+      <div class="slider-container">
+        <label for="fog-start-distance-slider">Fog Start Distance</label>
+        <input
+          type="range"
+          id="fog-start-distance-slider"
+          min="5"
+          max="100"
+          step="5"
+          value="10"
+        />
+        <div class="value-display">
+          <span id="fog-start-distance-value">10</span> units
+        </div>
+      </div>
+      <div class="slider-container">
+        <label for="fog-end-distance-slider">Fog End Distance</label>
+        <input
+          type="range"
+          id="fog-end-distance-slider"
+          min="100"
+          max="1500"
+          step="50"
+          value="1200"
+        />
+        <div class="value-display">
+          <span id="fog-end-distance-value">1200</span> units
+        </div>
+      </div>
+      <div class="slider-container">
+        <label for="fog-height-slider">Fog Height</label>
+        <input
+          type="range"
+          id="fog-height-slider"
+          min="0"
+          max="500"
+          step="10"
+          value="50"
+        />
+        <div class="value-display">
+          <span id="fog-height-value">50</span> units
         </div>
       </div>
     </div>
