--- a/src/index.html
+++ b/src/index.html
@@ -401,6 +401,34 @@
             <span id="fog-color-end-value">300</span> units
           </div>
         </div>
+        <div class="slider-container">
+          <label for="fog-close-hue-slider">Close Fog Hue</label>
+          <input
+            type="range"
+            id="fog-close-hue-slider"
+            min="0"
+            max="360"
+            step="1"
+            value="294"
+          />
+          <div class="value-display">
+            <span id="fog-close-hue-value">294</span>°
+          </div>
+        </div>
+        <div class="slider-container">
+          <label for="fog-distant-hue-slider">Distant Fog Hue</label>
+          <input
+            type="range"
+            id="fog-distant-hue-slider"
+            min="0"
+            max="360"
+            step="1"
+            value="23"
+          />
+          <div class="value-display">
+            <span id="fog-distant-hue-value">23</span>°
+          </div>
+        </div>
       </div>
     </div>
     <script src="bundle.js"></script>
